syntax = "proto3";

option go_package = ".;grpc";
package collector_grpc;

message Empty {}

message PingResult {
  string ip = 1;
  bool isTimeout = 2;
  float rtt = 3;
  string time = 4;
}

message TcpPingResult {
  string target = 1;
  bool isTimeout = 2;
  float rtt = 3;
  string sendAt = 4;
}


message PingReportRequest {
  PingResult result = 1;
  uint32 agentId = 2;
}

message TcpPingReportRequest {
  TcpPingResult result = 1;
  uint32 agentId = 2;
}

service Collector {
  rpc PingReport (PingReportRequest) returns (Empty);
  rpc TcpPingReport (TcpPingReportRequest) returns (Empty);
}
